# server/cmd/api/main.go
@@ -1,27 +1,16 @@
 package main
 
 import (
-	"net/http"
-
 	_ "github.com/Shivraj1712/Lattice.git/docs"
+	"github.com/Shivraj1712/Lattice.git/internal/cache"
 	"github.com/Shivraj1712/Lattice.git/internal/config"
 	"github.com/Shivraj1712/Lattice.git/internal/database"
-	"github.com/gin-gonic/gin"
-	swaggoFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
+	"github.com/Shivraj1712/Lattice.git/internal/handler"
+	"github.com/Shivraj1712/Lattice.git/internal/middleware"
+	"github.com/Shivraj1712/Lattice.git/internal/router"
+	"github.com/gofiber/fiber/v2"
+	"github.com/gofiber/swagger"
 )
-
-// @Summary		First Route
-// @Description Testing the first route
-// @Router 		/health [get]
-// @Success 	200 {object} map[string]string
-// @Failure 	500 {object} map[string]string
-// @Tags		Health
-func HealthCheck(ctx *gin.Context) {
-	ctx.JSON(http.StatusOK, gin.H{
-		"message": "server is running on port : 8080",
-	})
-}
 
 // @title 			Lattice API
 // @version			1.0
@@ -32,8 +21,13 @@ func main() {
 	config.FetchConfig()
 	database.ConnectDB()
 	database.MigrateModels()
-	r := gin.Default()
-	r.GET("/health", HealthCheck)
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggoFiles.Handler))
-	r.Run(":8080")
+	_ = cache.ConnectRedis()
+
+	app := fiber.New(fiber.Config{
+		ErrorHandler: middleware.ErrorHandler,
+	})
+	handler.OauthInit()
+	router.UserRoutes(app)
+	app.Get("/swagger/*", swagger.HandlerDefault)
+	app.Listen(":8080")
 }
